# ChangeLog for dev-perl/Archive-Tar
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.62 2006/07/02 03:17:49 mcummings Exp $

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.28.ebuild:
  Marking stable amd64

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Archive-Tar-1.29.ebuild:
  Stable on hppa

  09 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.29.ebuild:
  Marking stable sparc

  27 May 2006; Bryan Østergaard <kloeri@gentoo.org>
  Archive-Tar-1.28.ebuild:
  Stable on alpha.

  01 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  Archive-Tar-1.29.ebuild:
  Add ~x86-fbsd keyword.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-Archive-Tar-1.23-r1, files/digest-Archive-Tar-1.26,
  files/digest-Archive-Tar-1.28, Manifest:
  Fixing SHA256 digest, pass four

  29 Apr 2006; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.28.ebuild:
  Marked stable on mips.

*Archive-Tar-1.29 (17 Apr 2006)

  17 Apr 2006; Aaron Kulbe <superlag@gentoo.org> +Archive-Tar-1.29.ebuild:
  Version bump.

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> Archive-Tar-1.28.ebuild:
  Stable on ppc64

  23 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  Archive-Tar-1.28.ebuild:
  Stable on ppc.

  23 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Archive-Tar-1.28.ebuild:
  Stable on hppa

  22 Mar 2006; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.28.ebuild:
  marking stable x86, sparc

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.26.ebuild:
  Marked stable on mips.

  13 Feb 2006; <mcumming@gentoo.org> Archive-Tar-1.23-r1.ebuild,
  Archive-Tar-1.26.ebuild, Archive-Tar-1.28.ebuild:
  Virtual for perl-core dep

*Archive-Tar-1.28 (22 Jan 2006)

  22 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +Archive-Tar-1.28.ebuild:
  Version bump upstream
