@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/Archive-Tar-1.29.ebuild,v 1.5 2006/07/02 20:05:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/Archive-Tar-1.29.ebuild,v 1.6 2006/07/03 20:14:48 ian Exp $
 
 inherit perl-module
 
@@ -16,5 +16,6 @@ IUSE=""
 DEPEND="dev-perl/IO-Zlib
 	dev-perl/IO-String
 	>=virtual/perl-Test-Harness-2.26"
+RDEPEND="${DEPEND}"
 
 SRC_TEST="do"
