@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Archive-Tar
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.62 2006/07/02 03:17:49 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.63 2006/07/03 20:14:48 ian Exp $
+
+  03 Jul 2006; Christian Hartmann <ian@gentoo.org>
+  Archive-Tar-1.23-r1.ebuild, Archive-Tar-1.26.ebuild,
+  Archive-Tar-1.28.ebuild, Archive-Tar-1.29.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
   Archive-Tar-1.28.ebuild:
